testdata/fixtures/negative/multidb/db.go
package multidb

type DatabaseDriver interface{ Open(string) error }
